# rust-trending

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  config.example.toml  docker-compose.yml  flake.nix
.circleci/: config.yml
.github/workflows/: build.yaml  ci.yml  clippy.yaml  docker.yml  rustfmt.yaml  test.yaml
examples/: fetch-test.rs
src/: config.rs  lib.rs  main.rs  repo.rs  storage.rs
testdata/: test.html
