[package]
name = "rust-trending"
version = "0.4.0"
authors = ["Kangwook Lee <pbzweihander@gmail.com>"]
edition = "2018"
repository = "https://github.com/pbzweihander/rust-trending"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.66"
atrium-api = "0.4.0"
atrium-xrpc = "0.3.0"
bytes = "1.4.0"
env_logger = "0.9.1"
log = "0.4.17"
once_cell = "1.16.0"
random-string = "1.0.0"
redis = { version = "0.22.1", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11.12", features = ["rustls-tls"], default-features = false }
scraper = "0.13.0"
serde = { version = "1.0.147", features = ["derive"] }
time = { version = "0.3.22", features = ["formatting", "macros"] }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "time", "macros"] }
toml = "0.5.9"
twitter-v2 = { version = "0.1.8", default-features = false, features = ["oauth2", "rustls-tls"] }
url = { version = "2.3.1", features = ["serde"] }
