[package]
name = "rust-trending"
version = "0.4.0"
authors = ["Kangwook Lee <pbzweihander@gmail.com>"]
edition = "2018"
repository = "https://github.com/pbzweihander/rust-trending"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0.96"
atrium-api = "0.25.0"
atrium-xrpc = "0.12.1"
atrium-xrpc-client = { version = "0.5.11", features = ["reqwest"] }
bytes = "1.10.0"
env_logger = "0.11.6"
log = "0.4.26"
once_cell = "1.20.3"
openssl = { version = "0.10.71", features = ["vendored"] }
random-string = "1.1.0"
redis = { version = "0.29.0", features = ["tokio-comp"] }
reqwest = { version = "0.12.12", features = ["rustls-tls", "json"], default-features = false }
scraper = "0.23.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "time", "macros"] }
toml = "0.8.20"
unicode-segmentation = "1.12.0"
url = { version = "2.5.4", features = ["serde"] }
